@@ -1,3 +1,12 @@
+Wed May 29 01:58:32 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* src/asm.c (ASM_DefineLabel): Mark local labels not to export at all.
+	* unittests/reloc/src/include/keep_all.s: Add local label test case.
+	* unittests/reloc/ref/keep_all_after_elf.txt: Update.
+	* unittests/reloc/ref/keep_all_before_aof.txt: Likewise.
+	* unittests/reloc/ref/keep_all_after_aof.txt: Likewise.
+	* unittests/reloc/ref/keep_all_before_elf.txt: Likewise.
+
 Wed May 29 00:59:10 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	src:
